Added logging and checkbox to toggle

--- a/src/app/todo/todo-item.component.html
+++ b/src/app/todo/todo-item.component.html
@@ -5,6 +5,7 @@
 
 
 <div *ngIf="!canEdit">
+  <input type="checkbox" [checked]="todo.done" (change)="onUpdate()" >
   <label>{{ todo.description }}</label>
   <button (click)="onEdit()">edit</button>
   <button (click)="onDelete()">delete</button>
