--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<nav>
-  <ul>
-    <li><a routerLink="/todo-list" routerLinkActive="active">Todo Lists</a></li>
-    <li><a routerLink="/todo-item" routerLinkActive="active">Todo Item</a></li>
-  </ul>
-</nav>
-
-<router-outlet></router-outlet>
+<h1>Todo List</h1>
+<app-todo-list></app-todo-list>
